# quantumAlchemy

./: CarbonMod.ipynb  GetCSV.ipynb  HessianTools.py  NablaChem.ipynb  README.md  generate_groups.py  porph_B1_B0_-1.hess  porph_B1_B0_-1.out  pyproject.toml  useModel.py
alchemyWorkflow/: main.py  requirements.txt
alchemyWorkflow/data/: final_training_set.csv  porph.xyz
alchemyWorkflow/src/: __init__.py  data_processor.py  geometry_generator.py  getTrainSet.py
alchemyWorkflow/src/old/: Generate_geometry.py  geometry_generator.py
alchemyWorkflow/src/test/: generateGeom.py  init.py
src/quantum_alchemy/: pipeline.py  results.py  symmetry.py
