[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumAlchemy"
version = "0.1.0"
description = "Molecular Alchemy Pipeline"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "polars",
    "nablachem",
    "tqdm",
    "pymatgen",
    "cclib",
    "pandas",
    "pyscf",
]

[project.scripts]
quantumAlchemy = "quantum_alchemy.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]
